Add required artefacts for Jakarta, and link accordingly